--- a/0/0.md
+++ b/0/0.md
@@ -547,4 +547,62 @@ a = [
 ```
 
 There's a whole bunch of these. We can also look at these in nix repl, maybe that's actually a good point to mention, let's switch to the
-nix repl real quick, we also have auto completion here so that's nice. 27.46
+nix repl real quick, (`nix repl`), we can, (`nix-repl> builtins`), we also have auto completion here so that's nice, 
+`builtins.` and yeah I can see all the builtins (scrolling through), there is a whole bunch, there is to check the 
+types of expressions, there's like builtins to map attribute sets, oh yeah, that's (`builtins.match`) a regex matching thing,
+string processings, `builtins.false` interesting, (`builtins.toJSON`), to json, there is also from json, to read json
+into a nix attribute set.
+
+Yeah, I think, (`vim default.nix`), did I get the most of the nix, I don't know, maybe let's use a simple map here, 
+(`a = [ builtins.toString builtins.map builtins.partition ];`). Let's do like numbers one, two, three in a list,
+`a = [ 1 2 3 ];`, and let's do like a `builtins.map [ 1 2 3 ];`, and let's do like, let's give a function here,
+`builtins.map (x: [ 1 2 3];`, let's say like `x` plus one, `builtins.map (x: x + 1) [ 1 2 3 ];`, `in a;`, and so
+that works, adds x to all the numbers:
+
+```nix
+builtinFuns =
+  let
+    a = builtins.map (x: x + 1) [ 1 2 3 ];
+  in a;
+```
+
+It's fairly self-explanatory. There's also some weird thing where you don't actually need `builtins.` for some 
+builtins so map is one of them, `a = map (x: x + 1) [ 1 2 3 ];`, `map` is valid on it's own, so you'll see
+it sometimes just like that without any reference where does it come from. `toString` we saw that as well,
+`toString` doesn't need the `builtins.` but most builtins do need that prefix. 
+
+Maybe, what do you think of this, are you confused about anything or do you have a good overview?
+
+Matthew H.: No, that makes a lot of sense so far. 
+
+Silvan: All right, nice, then I think let's maybe go into derivations, um derivations are a bit of a hard topic
+because yeah but I guess It's fine, let's do like just a little bit about the `derivationPrimitive =`, or the
+`derivationBuiltin =`. So there is some derivation,
+
+```nix
+derivationBuiltin =
+  let
+    someDerivation =
+  in null;  
+```
+
+There is the `builtins.derivation` and this creates a derivation and what is a derivation, it's a build recipe,
+and there's some very basic arguments that you need to pass to actually make that work. Let's see, if we just 
+do this we should get an error:
+
+```nix
+derivationBuiltin =
+  let 
+    someDerivation = builtins.derivation {
+    
+    };
+  in someDerivation;
+```
+
+```nix
+nix-instantiate --eval --strict
+error: attribute 'name' missing for call to 'derivationStrict'..
+```
+
+Attribute name missing for call, the error is again a bit messed up, but let's roll with it for now,
+so derivations need a name, let's call this test 30.59
