--- a/0/0.md
+++ b/0/0.md
@@ -605,4 +605,167 @@ error: attribute 'name' missing for call to 'derivationStrict'..
 ```
 
 Attribute name missing for call, the error is again a bit messed up, but let's roll with it for now,
-so derivations need a name, let's call this test 30.59
+so derivations need a name, let's call this test:
+
+```nix
+derivationBuiltin = 
+  let
+    someDerivation = builtins.derivation {
+      name = test;
+    };
+  in someDerivation;
+```
+
+```nix
+nix-instantiate --eval --strict
+error: required attribute 'builder' missing
+```
+
+They also need a builder attribute. This says which binary will build the derivation, now this is a bit hacky here, I'm just
+gonna use `/bin/sh` which is one of the only binaries available in the sandbox on I think all systems:
+
+```nix
+derivationBuiltin = 
+  let 
+    someDerivation = builtins.derivation {
+      name = "test";
+      builder = "/bin/sh";
+    };
+  in someDerivation;
+```
+
+```nix
+nix-instantiate --eval --strict
+error: required attribute 'system' missing..
+```
+
+Um, then also a system is needed, `system =`, I'm gonna use `"x86_64-linux";` the system I'm on right now, so linux:
+
+```nix
+derivationBuiltin =
+  let
+    someDerivation = builtins.derivation {
+      name = "test";
+      builder = "/bin/sh/";
+      system = "x86_64-linux";
+    };
+  in someDerivation;
+```
+
+```nix
+nix-instantiate --eval --strict
+```
+
+And now that actually works. We can't really see the xoutputs super well here, I wanna re-format this a bit,
+let me do like a, let's convert this entire attribute set into a let statement (goes to the top) and then add
+an `in` at the end and do a `derivationBuiltin` here, so it will declare all the things we have above but only
+result in this `derivationBuiltin` thing:
+
+```nix
+# Attribute set
+let
+  foo = null;
+  -- all the way to the end of default.nix`
+
+  derivationBuiltin = 
+    let
+      someDerivation = builtins.derivation {
+        name = "test";
+        builder = "/bin/sh";
+        system = "x86_64-linux";
+      };
+    in someDerivation;
+in derivationBuiltin
+```
+
+```nix
+nix-instantiate --eval --strict
+{ all = [ <<repeated>> ]; builder = "/bin/sh"; drvAttrs = { builder = "/bin/sh"; name = "test"; system =..
+```
+
+So yeah, we get this output, so what this really does underneath is that it takes all these arguments, calls
+some internal nix primitive which creates a derivation in the actual store, that's this path here,
+`drvPath = "/nix/store/y1s2..-test.drv";`, and it also tells us the output path, `outPath = "..";`, so this
+means when you build this derivation description and we can look at this, actually no we can't look at it yet because,
+oh, kind of a quirk, `--eval` evaluates it in like a read-only mode which doesn't write anything to the nix store.
+We can do `--read-write` mode to enable this, (`nix-instantiate --eval --strict --read-write`) I believe. Ok now
+we should be able to look at the store path here, we can just `cat /nix/store/y1s2..-test.drv` this path and it's
+like a kind of simple description of how derivation gets built, there is like output path where should the derivation
+put the result when it runs, what system is it in, the builder, and the environment (`("name", "test")`, ah actually
+not, the name out, some very basic things.
+
+Now we can call `nix-store -r`, this stands for `--realize`, you can call this to kind of manually build this derivation:
+
+```nix
+> nix-store --realize /nix/store/y1s2..-test.drv
+```
+
+Generally you don't need this but let's just go for it for now. If we try to build this it doesn't really do anything:
+
+```nix
+this derivation will be built:
+  /nix/store..-test.drv
+building...
+error: builder for ... failed to produced output path for output 'out' at ..
+```
+
+Nix throws an error because we just called bin shell, it doesn't write the output here. 
+
+```nix
+cat /nix/store/..-test.drv
+Derive([("out","/nix/store/d62..-test","","")]..
+```
+
+Okay? And so usually here, what we did now is this weird thing, `nix-instantiate --eval`, `--strict` isn't needed here,
+`nix-instantiate --eval --read-write-mode` and this can then be copied, actually we do need `--strict`, then we 
+copy the `..-test.drv` path, it's super convoluted and then we like the, `nix-store --realize ..`. Easier way, you
+can just do `nix-build`, that's really just what nix build does. And so if you do that it will evaluate it and try
+to build it in one step.
+
+And so, also I think we can just nix instantiate it to get the derivation path
+
+```nix
+nix-instantiate
+warning: you did not specify '--add-root'; the result might be removed by the garbage collector
+/nix/store/y1..-test.drv
+```
+
+So nix instantiate just kind of instantiates the derivation. Instantiating means to evaluate a derivation and
+produce it in the store, so that this file, (`/nix/store/..-test.drv`), actually exists. `nix-build` is essentially
+just:
+
+```nix
+nix-build = nix-instantiate + nix-store --realize
+```
+
+It first creates a derivation, and then tries to realize or slash build the derivation. And so let's try to fix this 
+derivation in here, there's other arguments we can pass, there's some special ones, like `args` where we can provide
+arguments to the builder, (`args = [ " `), and in here we're gonna do `-c` and like this maybe, `> $out"`:
+
+```nix
+-- ..
+builder = "/bin/sh";
+args = [ "-c" "> $out" ];
+system = "x86_64-linux";
+-- ..
+```
+
+So this says, shell, take a script, execute the script, and the script writes an empty file to the `out` variable, and 
+in the builder the out environment variable points to the output path that nix wants you to write stuff and so this
+should at least produce an empty result and build properly, let's see, that's super slow for some reason. Okay, it worked.
+
+```nix
+> nix-build
+this derivation will be built:
+```
+
+So we can `ls` this (`/nix/store/..-test.drv`) I guess but it won't show anything because we didn't try anything but now
+here (`vim default.nix`), we can of course do anything we want, well of course there's more complicated things, but for now,
+let's do like a, can I do like.. would that work? (`args = [ "-c" "> $out <<< foo" ];`, I'm not sure that's valid shell,
+`nix-build`, nope, that doesn't work. Well I don't know how to write to a file, bin shell, well I guess that can work, like
+a `echo foo > $out`, all right, `nix-build`, `ls` as before, it's a file, but yeah, if we do a `cat /nix/store..-test.drv` we 
+get `foo` now.
+
+And so when you `nix-build` it puts a result symlink in your current directory, `result -> /nix/store..-test`, pointing 
+to the thing it just built. As this way you can just `cat result` as well and inspect the result this way. It's not
+always result so you need to watch how to, like there is some special features that change the output link name 37:59
