nixpkgs simple derivation building

--- a/0/0.md
+++ b/0/0.md
@@ -768,4 +768,220 @@ get `foo` now.
 
 And so when you `nix-build` it puts a result symlink in your current directory, `result -> /nix/store..-test`, pointing 
 to the thing it just built. As this way you can just `cat result` as well and inspect the result this way. It's not
-always result so you need to watch how to, like there is some special features that change the output link name 37:59
+always result so you need to watch how to, like there is some special features that change the output link name.
+
+So this is how underneath you'd build a derivation but you kind of never need to do this yourself, because, well for one,
+it's really, like `/bin/sh` doesn't really work that well. You want to use more complicated things, and this build runs in 
+a sandbox so you can't use anything like from your home directory, (`args = [ "-c" "/home/infinisil/ echo foo.."]`), so that's
+where nix packages comes in play. Nix packages is the package collection of nix and we can use all the packages
+specified there already and within them, they kind of don't use bin shell underneath I believe, but they kind of
+build up this entire tree of packages from like some bootstrap binary up to kind of all the things you want to use 
+on your pc like firefox, terminals, everything. And it also contains builders for derivations that make this much 
+simpler. So let's see, let's get a nixpkgs in here, it's actually also good kind of lead into some other features,
+right imports, we didn't talk about imports yet, but yeah, so let's use another builtins, that's `builtins.fetchTarball`:
+
+```nix
+nixpkgs = builtins.fetchTarball
+```
+
+Fetchtarball fetches tarball, fairly self-explanatory. We can either provide the link directly, let me do that for now,
+I'm gonna go to nix packages, like get a tarball for that, actually let's just use master for now, we use:
+
+```nix
+nixpkgs = builtins.fetchTarball "https://github.com/NixOS/nixpkgs/archive/master.tar.gz";
+```
+
+Generally not recommended, because this changes over time, generally you want to use pure fetchers, but yeah,
+so nix packages, we can look at this, we can evaluate this `nix-instantiate --eval`:
+
+```nix
+-- ...
+  nixpkgs = builtins.fetchTarball "https://github.com/NixOS/nixpkgs/archive/master.tar.gz";
+in nixpkgs
+```
+
+Okay, and this gives us a directory, that was really fast actually, uh, `nix-instantiate --eval --read-write-mode`,
+oh that still worked, interesting. Anyway so we can, once we have a path to nixpkgs, that actually, you can 
+also provide a local path actually, we didn't look at paths yet, but you can also do, if you have a local
+clone, you can just like:
+
+```nix
+nixpkgs' = ~/src/nixpkgs;
+```
+
+That's where my local clone lives. Paths are also interesting, we should look at paths but maybe not for now. So you can
+reference local paths with flakes and you won't be able to anymore, uh, because this is to some degree impure,
+because you can access anything here, but for now it's in the nix language. So you can also access like local paths
+in your project, that's still works with flakes, so if we had like a nixpkgs clone locally we could do that
+
+```nix
+nixpkgs' = ./nixpkgs;
+```
+
+And so once we have nixpkgs we need to import it so we can use all the packages, that's done with import:
+
+```nix
+pkgs = import
+```
+
+So import takes a path to a nix file and imports it, imports the nix expression from that file, so we can
+import nixpkgs like this:
+
+```nix
+pkgs = import nixpkgs;
+```
+
+By default, if it's a directory, it uses default.nix file, so in nixpkgs in the root directory there is a
+`default.nix` file and that is the entry point of nixpkgs. We can also manually provide this with:
+
+```nix
+pkgs = import (nixpkgs + "/default.nix");
+```
+
+Like just concatenate the string to access a different file, but yeah, we don't need to do that, so if you would
+just do this:
+
+```nix
+-- ..
+  pkgs = import nixpkgs;
+in pkgs
+```
+
+And evaluate this, we would get a lambda:
+
+```nix
+:!nix-instantiate --eval
+<LAMBDA>
+```
+
+Which is just another name for a function, and so the root of nixpkgs is a function, and if we want to
+actually access the packages we need to give an argument, and that's generally, that's always an attribute
+set, so we can use currying here, so this is just like this:
+
+```nix
+  pkgs = (import nixpkgs) {};
+in pkgs
+```
+
+But these aren't needed so if we do that we do get access to the set:
+
+```nix
+  pkgs = import nixpkgs {};
+in pkgs
+```
+
+(`nix-instantiate --eval` returns all nix packages). So these are all the packages in nixpkgs as a single
+attribute set containing all of them. All the packages, and all the package builders as well. Now in this
+attribute set you can provide some other options, some common ones are `overlays =`, with overlays you
+can customize packages and nix packages a bit. I like to personally override this to an empty set,
+(`overlays = [];`) because by default it reads from like `~/.config/nixpkgs/overlays` or something like that,
+which is kind of impure and sometimes messes with packages in weird ways. Another thing `config =` is by
+default read from some impure location so I like to also override this to the empty set, `config = {};`,
+and then one of the most common ones for flakes you'll see is `system =`, that's the system type, the
+packages are specific to linux or darwin or something, and so I provide this here, `system = "x86_64-linux";`.
+You can also, this doesn't work in flakes, but in non-flake nix you can give `builtins.currentSystem`, and it just
+points to your current system, (`system = builtins.currentSystem`).
+
+```nix
+overlays = []; # Because by default ~/.config/nixpkgs/overlays
+config = {}; # Because by default ~/.config/nixpkgs/config.nix
+system = "x86_64-linux";
+# system = builtins.currentSystem
+```
+
+And so in here we can for example say, give me the hello package, `in pkgs.hello`, if we now use `nix-build`, 
+nix build hello, it will substitute hello in 99 percent of, or hello hopefully always but some packages aren't always
+built by hydra. Hydra is the CI system for nix packages and you have the cache installed by default, so
+you won't have to fetch in many cases. Right and now we have hello here, if we build hello, get the result
+symlink pointing to hello and here we can then inspect the result and see that it has a hello binary and
+we can execute this locally here `result/bin/hello`. But yeah, but how to actually build a derivation generally,
+so you use the derivation builders in nixpkgs. So let's say I want to package something in in some c package:
+
+```nix
+someCPackage = 
+```
+
+It's kind of the default in nix packages for some reason, and that's using:
+
+```nix
+someCPackage = pkgs.stdenv
+```
+
+Like standard environment contains some basic packages for building C and other related bits, and
+make derivation:
+
+```nix
+someCPackage = pkgs.stdenv.mkDerivation {
+
+};
+```
+
+That's the most used by far builder for packages, and so let's try just with this to see what would fail if
+we didn't provide any arguments:
+
+```nix
+let 
+    nixpkgs = builtins.fetchTarball "https://github.com/NixOS/nixpkgs/archive/master.tar.gz";
+    pkgs = import nixpkgs {};
+    someCPackage = pkgs.stdenv.mkDerivation {
+  };
+in someCPackage
+```
+
+```nix
+nix-build
+error: derivation name missing
+```
+
+Derivation name missing, we also had that before, `name = "someCPackage";`, all right, now we got an error that
+we don't have a source. And so one of the, one of the main arguments here is a source, let's for source maybe pick
+`src = ./src;` and let's actually create this directory, `mkdir src`, let's also do like `echo foo > src/foo`, all
+right, so we have at least a foo in there, so with a source, so by default, oh actually makefile might be good, so
+by default it calls make, and the structure into phases, that's kind of the abstraction that mkDerivation provides,
+so if we were to just run it like this we get an error no makefile doing nothing:
+
+```nix
+let 
+    nixpkgs = builtins.fetchTarball "https://github.com/NixOS/nixpkgs/archive/master.tar.gz";
+    pkgs = import nixpkgs {};
+    someCPackage = pkgs.stdenv.mkDerivation {
+      name = "someCPackage";
+      src = ./src
+  };
+in someCPackage
+```
+
+```nix
+-- transcriber note: currently (12/24) the error looks a bit different
+--...
+building '/nix/store/2fmgxgn6zsn9yj991g75wm7vvml4aq5j-someCPackage.drv'...
+Running phase: unpackPhase
+unpacking source archive /nix/store/zdm7f0wq0i88vhppqc9xly6bf0r1i6f3-src
+source root is src
+Running phase: patchPhase
+Running phase: updateAutotoolsGnuConfigScriptsPhase
+Running phase: configurePhase
+no configure script, doing nothing
+Running phase: buildPhase
+no Makefile or custom buildPhase, doing nothing
+Running phase: installPhase
+no Makefile or custom installPhase, doing nothing
+Running phase: fixupPhase
+error: builder for '/nix/store/2fmgxgn6zsn9yj991g75wm7vvml4aq5j-someCPackage.drv' failed to produce output path for output 'out' at '/nix/store/2fmgxgn6zsn9yj991g75wm7vvml4aq5j-someCPackage.drv.chroot/root/nix/store/0w7rp9prqlaf6dyqwq641058kj1ddjr5-someCPackage'
+```
+
+So by default, for like make file, `vim makefile`, then have like a, `default:` which does something like `echo foo`, or move foo
+to out, `mv foo $out`, well then it's like like see makefile syntax, then an install phase, although that's actually
+the install phase:
+
+```make
+default:
+  echo bar >> foo
+
+install:
+  mv foo $(out)
+```
+
+So this, very basic makefile, let's see if it works, `nix-build`, okay it works.
+
+48.32
