conclusion of 0th

--- a/0/0.md
+++ b/0/0.md
@@ -982,6 +982,64 @@ install:
   mv foo $(out)
 ```
 
-So this, very basic makefile, let's see if it works, `nix-build`, okay it works.
+So this, very basic makefile, let's see if it works, `nix-build`, okay it works. So now we have a result, `cat result/foo`,
+which contains `foo bar`, and so what this does underneath, it has a phases array, (`# phases: `), which gives
+things like upack phase, (`[ unpackPhase`), you have patch phase, (`[ unpackPhase patchPhase configurePhase buildPhase
+installPhase fixupPhase ]`) and probably some more I forgot about, but these are run in order and do various things,
+so `unpackPhase` takes the source here, (`src = ./src`), unpacks it if necessary, say if you were to have provided a
+zip file or something it would unpack that zipfile into the local directory in the build.
 
-48.32
+`patchPhase`, you can provide `patches = [ ];` array of `.patch` files:
+
+```nix
+patches = [
+  # array of .patch file
+];
+```
+
+A very easy way to apply patches to the source. Then `configurePhase` by default calls `./configure`, kind of the
+default in the C world:
+
+```nix
+# configurePhase by default calls ./configure 
+# buildPhase by default calls `make`
+# installPhase by default calls `make install`
+```
+
+And then `fixUp` phase like some binary fixup thing does some binary patching magic..? (smiles). And so that's really
+the abstraction that `mkDerivation` provides, and that's, it's generally useful, you can customize it in some ways,
+so you can, all of these phases have pre and post hooks, so you can say if you want to like customize the configure phase,
+and run something before the `./configure` runs you can say `preConfigure` and then a bash script here:
+
+```nix
+preConfigure = ''
+  do some magic
+'';
+```
+
+Then you also have `postConfigure` for after the configure, you have the same for `buildPhase` and `installPhase`,
+for all the phases, `preBuild` and `postBuild` and so on. And so yeah, generally you use this kind of thing
+to build packages. Now this is the most generic builder, there's more specific ones in nixpkgs. We're running out of time,
+but then there's also for all the languages there are separate builders, so there's:
+
+```nix
+# pkgs.pythonPackages.buildPythonPackage
+# pkgs.buildRustCrate
+# pkgs.haskellPackages.mkDerivation
+```
+
+There's all kinds of builders that produce derivations and pick functions and have their own abstractions, things like that.
+
+Matthew H: At least the naming is consistent. (laughs)
+
+Silvan: (laughs) Yes, let's pretend it is. 
+
+SomeoneElse: Problems in computer science.. (everyone laughing)
+
+Silvan: All right but yeah, that's like, I think fairly basic nix tutorial, what do you think, do you, did you get most of that,
+
+Matthew H: I think I got a lot of it, I think I'm gonna have to go back and read over the source, the back half, the derivations,
+up to sort of making custom derivations, I'll need a bit of refresh on that, but that was a really interesting introduction,
+yeah, thank you so much.
+
+
