5th not providing a hash to different fetchers

--- a/5/5.md
+++ b/5/5.md
@@ -114,6 +114,77 @@ Silvan: I see, nice. Yeah, let's try to do that for now, I'm gonna try to do the
 And it works, so apparently this didn't work at all, is it because I didn't provide a hash here? Or is it cargo sha 256, oh
 it is because we haven't applied the overlay, I just wrote it in my local directory here. So I'm using the old CLI here,
 we are in a nixpkgs checkout, you can build packages like this (`nix-build -A airshipper`), but this doesn't apply the
-overlay automatically
+overlay automatically. We could move the overlay to:
 
+```bash
+mv overlay.nix ~/.config/nixpkgs/overlays/airshipper.nix
+```
 
+We need to create the directory first, `mkdir ~/.config/nixpkgs/overlays -p`, move it in there, so this is impure,
+I see Yuri mentions in the chat so this is impure, so flakes doesn't work with this. Flakes would just ignore this.
+I'm gonna show this without relying on this in a second
+
+```nix
+nix-build -A airshipper
+error: undefined variable 'fetchFromGitLab`
+```
+
+Okay, we get an error because I made a mistake in the file but it gets evaluated, so let's fix it here, we need to use:
+
+```nix
+self: super: {
+  airshipper = super.airshipper.overrideAttrs (old: {
+    src = self.fetchFromGitLab {
+        owner = "Veloren";
+        repo = "airshipper";
+        rev = "v${version}";
+        sha256 = "";
+    };
+  });
+}
+```
+
+Let's try to evaluate it again:
+
+```nix
+nix-build -A airshipper
+warning: found empty hash, assuming 'sha256-AA..='
+```
+
+And okay, we can see it inferred from the empty hash, and did we provide one? We did provide one, we also want to see if
+it works without any hash at all, (`# sha256 ="";`), yeah that also works, okay that's good news. You do need to watch out
+a bit if you use `fetchTarball` without the hash, so this a builtin fetcher, (`builtin.fetchTarball {}`), and we could
+also try this out here so let's say `src = fetchTarball {};` and then we use 
+```nix
+url = "https://github.com/Veloren/airshipper/archive/v0.9.0.tar.gz";
+```
+
+Julien Debon: I think it's gitlab not github.
+
+Silvan: Oh it's gitlab all right.
+
+Simone Narbutas: It's mirrored though.
+
+Silvan: It does turn into the same url?
+
+Simone Narbuta: It should be the same on github, like as far as I know
+
+Silvan: Okay, let's try this then
+
+```nix
+self: super: {
+  airshipper = super.airshipper.overrideAttrs (old: rec {
+    version = "0.9.0";
+    # src = self.fetchFromGitLab {
+    #    owner = "Veloren";
+    #    repo = "airshipper";
+    #    rev = "v${version}";
+    #    sha256 = "";
+    #};
+    src = fetchTarball {
+      url = "https://gitlab.com/Veloren/airshipper/archive/v0.9.0.tar.gz";
+    };
+  });
+}
+```
+8.22  
