--- a/1/1.md
+++ b/1/1.md
@@ -3,22 +3,62 @@ ck3d: I have a pull request open, I hope we can discuss it here, it's this one,
 Silvan: Yeah, let's go to nixpkgs, `https://github.com/nixos/nixpkgs`, (goes to pull requests),
 `https://github.com/nixos/nixpkgs/186314`.
 
-> Transcriber note: This link is dead. The title of this pull request was:
-
-```nix
-# nixos: Add control for systemd representation #186314
-```
-
-> We can find this pull request at, we can also see it has been merged:
-
-https://github.com/NixOS/nixpkgs/pull/186314 titled: 
-
-```nix
-# nixos: Add option to influence override strategies in systemd units
-```
+> Link changed. The title of this pull request was:
+> nixos: Add control for systemd representation #186314
+> We can find this merged under a different title:
+> https://github.com/NixOS/nixpkgs/pull/186314 titled: 
+> nixos: Add option to influence override strategies in systemd units
 
 ck3d: I think we can start with the second issue, so the main problem by `grahamc`:
+https://github.com/NixOS/nixpkgs/issues/135557, and the question is how can we define,
+it's about the template system of systemd, and the special case here, here he want's to make
+an instance called `systemd.services."foo@example" = {};` and what we expect is that 
+`foo@example` is an instance of `foo@`, but in systemd, ne, in NixOS, what we do here is
+defining a new service which replaces the template
 
-https://github.com/NixOS/nixpkgs/issues/135557
+Silvan: Yeah, and so the PR here attempts to fix that?
 
+ck3d: Yeah
+
+Silvan: Should we just take a quick look at the PR and see what it does, maybe give a quick
+review, is this your PR?
+
+ck3d: Yes, it's my PR
+
+Silvan: Ah, I see so you are ck3d, nice, yeah we can take a look here. We can't go into like
+super details here but we can take a look.
+
+ck3d: It's not too complex. So introduce a new option in `nixos/lib/systemd-lib.nix`, so the first one
+is called `representation` (note: later changed to `overrideStrategy`):
+
+```nix
+overrideStrategy = mkOption {
+  default = "asDropinIfExists";
+  type = types.enum [ "asDropinIfExists" "asDropin" ];
+  description = lib.mdDoc ''
+    Defines how unit configuration is provided for systemd:
+ 
+   `asDropinIfExists` creates a unit file when no unit file is provided by the package
+    otherwise a drop-in file name `overrides.conf`.
+   
+   `asDropin` creates a drop-in file named `overrides.conf`.
+    Mainly needed to define instances for systemd template units (e.g. `systemd-nspawn@mycontainer.service`).
+   
+    See also systemd.unit(1).
+  '';
+};
+```
+
+Is representation a right name?
+
+Silvan: A right name, so this is defines how unit configuration is provided (represented) for systemd..
+
+> Note: Not sure how to go about this episode, there is much back and forth communication and reading the code
+
+Silvan: The markdown documentation is available now in NixOS modules, (`description = lib.mdDoc`), that's really
+nice, so I see you are already using the literals.
+
+By the way really cool thing about systemd if you haven't known about this already, `man systemd.directives` is a
+manpage which is an index for all the systemd terms, so we have all the options here, not just options, all the
+individual commands and stuff
 
