--- a/5/5.md
+++ b/5/5.md
@@ -187,4 +187,27 @@ self: super: {
   });
 }
 ```
-8.22  
+
+So now, `nix-build -A airshipper`, so this, oh, that looked like an error, it's another url I believe..
+
+Yuriy Taraday: Try github instead of gitlab
+
+Silvan: Oh.. I see. That should make it work then. Ok we can see here we didn't get an error, even though we didn't provide a hash,
+so this is a difference between the nixpkgs fetchers which don't work without a hash at all, well they shouldn't work
+without a hash, nix does allow this warning when you don't provide a hash, but obviously you are gonna fix it when you see it.
+The builtin fetchers don't need a hash and they're just gonna download these files impurely so we have to explicitly provide
+a hash here, I think we can also just do `hash = "";`, let's try this:
+
+```nix
+nix-build -A airshipper
+error: unsupported argument 'hash' to 'fetchTarball'
+```
+
+Fair enough, `fetchTarball` apparently doesn't have a hash, all right let's make it, that's unfortunate: `sha256 = "";`:
+
+```nix
+nix-build -A airshipper
+warning: found empty hash, assuming 'sha256..='
+```
+
+10.01
