rust overlay, looking how buildRustPackage is implemented

--- a/5/5.md
+++ b/5/5.md
@@ -210,4 +210,155 @@ nix-build -A airshipper
 warning: found empty hash, assuming 'sha256..='
 ```
 
-10.01
+This time it works, this time it gets the same result as the `fetchFromGitlab`, in that it assumes the empty zero hash.
+Yeah, so I guess it might be good to always set the hash to an empty string (`sha256 = "";`) so that you don't run into
+these cases where the nix packages fetchers do need them but those don't and yeah, anyways, let's go back to this, so
+we get the hash back from this. As soon as it's downloaded.. it's quite a bit project seemingly, there we go, oh it
+dissapeared, oh it's downloading it again.
+
+Simon Narbutas: This should be just a launcher, so it shouldn't be a big.
+
+Silvan: Mhm, might also just be slow for some reason then. All right I copied the hash, and insert here, and here maybe
+we can also use hash, (`hash = "sha256-...=";`), oh it doesn't really matter, both of them work the same way. All right so
+that works, let's try to build it. All right and now we get a patch error. Let's see it might be good to look into that and 
+see what happens. Well but first I want to do this kind of overlay kind of purification in a way. So let's try to build 
+this with with a flake way, so let's use the new nix CLI, let's try to build airshipper in nixpkgs here,
+(`nix build .#airshipper`), this should work but give the old version, it shouldn't take a look at the overlay here, and yeah
+if we look into the directory, (`result -> /nix/store/z..-airshipper-0.7.0`). Oh, and actually, oh, we can't pass in the
+overlay from the CLI here, that's right, because flakes doesn't support `--arg` and `--argstr` yet,
+(`nix build .#airshipper --argstr`). Uhm, fair enough, so I guess with flakes you'd have to write a `flake.nix` to import
+nixpkgs with the overlay you want, (`vim flake.nix`), uhm, or with traditional nix you could also do this, `(nix-build -A airshipper`)
+to make it pure. Let's move it back from nixpkgs, (`mv ~/.config/nixpkgs/overlays/airshipper.nix .`) to the local directory
+for now, we can also do this, (`nix-build -A airshipper --arg overlays`), we can provide `--arg overlays` so this is,
+if you import nixpkgs you can pass the overlays attribute, you can pass all the overlays in the overlays attribute, and
+we can also do this from the command line so we can give the array of overlays here, here we can just say:
+
+```nix
+nix-build -A airshipper --arg overlays '[ (import ./airshipper.nix) ]'
+```
+
+And this then gives the same result without the impurity of looking it up in the `.config` directory. So let's see how far
+does it get here. Well in the end it will also fetch the old, oh yeah, look here, the vendor directory is still 0.7.0.
+Might be cause by the name but I don't think so, but let's update the name as well, well let's just see what the name
+currently is. Let's do..
+
+Viktor Kleen: The name looks all right, right, from the derivation?
+
+Silvan: Oh yeah, it does look all right. Interesting, so that gets propagated automatically, in this case we don't need it.
+All right, then, well.. let's also try to override this one..
+
+Viktor Kleen: I think that's because of the.. package the pname, the version already, the name get's me confused.
+
+Silvan: I do think that underneath there sometimes still was a problem because the kind of pname and version was only,
+was kind of transformed to the name underneath and but only in the original make derivation call or something. Maybe not
+though, I guess that works.
+
+Simonas Narbutas: But I was trying to figure out what pulls in this dash vendor, does it come from the rust package function or?
+
+Silvan: Yeah, let's look at how it's implemented underneath. So the airshipper, let's go back to airshipper here, so airshipper
+uses `rustPlatform.buildRustPackage` and so what is then here, so yeah, it's this hash here, (`cargoSha256`), that is kind of
+the problem, so I guess, let's take a look at `buildRustPackage`.
+
+So how to find things in nixpkgs is always a bit of a gamble but I like to just rip, use ripgrep to search for the attribute 
+equals:
+
+```bash
+rg 'buildRustPlatform ='
+```
+
+Which didn't work this time which is unfortunate
+
+Julien Debon: Isn't it package?
+
+Silvan: Oh `buildRustPackage`:
+
+```bash
+rg 'buildRustPackage ='
+pkgs/development/compilers/rust/make-rust-platform.nix
+15: ..
+```
+
+Oh awesome, I was gonna go for rustPlatform next but this makes it a bit easier:
+
+```bash
+vim pkgs/development/compilers/rust/make-rust-platform.nix
+```
+
+All right (searches for `/build`), `buildRustPackage` is this package down here. In vim useful `gf` to jump to file,
+I guess most vim users already know that, but so this is the file, (`pkgs/build-support/rust/build-rust-package/default.nix`),
+we have all the attributes here, we have `cargoVendorDir`, this isn't used, where is (`cargoSha256`), oh it's not in the
+arguments up here. I don't like how this is done, how we have some arguments in here but also others are just accepted because
+of the ellipsis here and apparently `cargoSha256` comes from there. Apparently, I'm not really sure why it's done this way,
+but so `cargoSha256`, and this is used in the `cargoDeps` here, so this does `fetchCargoTarball` and it passes the
+sha to that function, all right, so if we can override that function we could maybe do that:
+
+```nix
+  cargoDeps =
+    if cargoVendorDir != null then null
+    else if cargoLock != null then importCargoLock cargoLock
+    else fetchCargoTarball ({
+      inherit src srcs sourceRoot unpackPhase cargoUpdateHook;
+      name = cargoDepsName;
+      patches = cargoPatches;
+    } // lib.optionalAttrs (args ? cargoHash) {
+      hash = args.cargoHash;
+    } // lib.optionalAttrs (args ? cargoSha256) {
+      sha256 = args.cargoSha256;
+    } // depsExtraArgs);
+```
+
+> This file currently looks like this:
+
+```nix
+cargoDeps' =
+    if cargoVendorDir != null then
+      null
+    else if cargoDeps != null then
+      cargoDeps
+    else if cargoLock != null then
+      importCargoLock cargoLock
+    else if useFetchCargoVendor then
+      fetchCargoVendor (
+        {
+          inherit
+            src
+            srcs
+            sourceRoot
+            cargoRoot
+            preUnpack
+            unpackPhase
+            postUnpack
+            ;
+          name = cargoDepsName;
+          patches = cargoPatches;
+          hash = args.cargoHash;
+        }
+        // depsExtraArgs
+      )
+    else
+      fetchCargoTarball (
+        {
+          inherit
+            src
+            srcs
+            sourceRoot
+            cargoRoot
+            preUnpack
+            unpackPhase
+            postUnpack
+            cargoUpdateHook
+            ;
+          name = cargoDepsName;
+          patches = cargoPatches;
+        }
+        // lib.optionalAttrs (args ? cargoHash) {
+          hash = args.cargoHash;
+        }
+        // lib.optionalAttrs (args ? cargoSha256) {
+          sha256 = lib.warn "cargoSha256 is deprecated. Please use cargoHash with SRI hash instead" args.cargoSha256;
+        }
+        // depsExtraArgs
+      );
+```
+
+
